refactor: 使用GetServiceContextFromContext降低代码复杂度 feat: 添加文件列表api doc: 文档更新 fix: 修复创建文件夹路径问题，使用数据库中parent文件夹的path拼接得到 feat: makefile添加初始化数据库选项
